[tool.poetry]
name = "backend-call"
version = "0.1.0"
description = ""
authors = ["Ihsara <longchau21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
jsonify = "^0.5"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
